--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,14 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.16-SNAPSHOT</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
+		 <!-- lookup parent from repository -->
+		 
 	</parent>
 	<groupId>com.Geolocation</groupId>
 	<artifactId>weather</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>weather</name>
 	<description>Demo project for data security</description>
 	<properties>
